--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=api
+spring.datasource.url=jdbc:mysql://localhost/med_helper_api
+spring.datasource.username=root
+spring.datasource.password=root
