--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/med_helper_api
 spring.datasource.username=root
 spring.datasource.password=root
+spring.flyway.baselineOnMigrate=true
