--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost/med_helper_api
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.flyway.repair-on-migrate=true
 spring.flyway.baselineOnMigrate=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
